--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,6 +79,10 @@
                                 </v-card>
                             </v-col>
                         </v-row>
+                        <v-row align="center"
+                               justify="center">
+                            New User? <a th:href="@{/register}"> Register here</a>
+                        </v-row>
                     </v-container>
                 </v-content>
             </v-app>
